[package]
name = "cog-neat-oh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
data-encoding = "2.3.2"
hex = "0.4.3"
hkdf = "0.11.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
rand = "0.8.4"
ring = "0.16.20"
sha2 = "0.9.8"
